samples/_failures_safe/1761722761_64e21f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d65333ca.c: In function ‘main’:
./samples/SAFE/__tmp_d65333ca.c:140:9: error: expected expression at end of input
  140 |         if (scanf("%d", &
      |         ^~
./samples/SAFE/__tmp_d65333ca.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d65333ca.c:140:9: error: expected declaration or statement at end of input
